--- a/contents/未翻译/13 - Go 语言中如何获取对象的类型.md
+++ b/contents/未翻译/13 - Go 语言中如何获取对象的类型.md
@@ -1,1 +1,56 @@
 <https://stackoverflow.com/questions/20170275/how-to-find-the-type-of-an-object-in-go>
+
+# 问题
+
+Go 语言中应该如何获取对象的类型？在 Python 中，我只需要用 `typeof` 即可获取。类似的，Go 中有没有实现相同的功能？
+
+下面的代码中：
+
+```go
+for e := dlist.Front(); e != nil; e = e.Next() {
+    lines := e.Value
+    fmt.Printf(reflect.TypeOf(lines))
+}
+```
+
+我无法获取 `lines` 对象的类型，它是一个字符串数组。
+
+# 回答
+
+Go 反射包有获取变量类型的方法。
+
+以下代码片段将打印出字符串、整数和浮点数的反射类型。
+
+```go
+package main
+
+import (
+    "fmt"
+    "reflect"
+)
+
+func main() {
+
+    tst := "string"
+    tst2 := 10
+    tst3 := 1.2
+
+    fmt.Println(reflect.TypeOf(tst))
+    fmt.Println(reflect.TypeOf(tst2))
+    fmt.Println(reflect.TypeOf(tst3))
+
+}
+```
+
+输出：
+
+```go
+string
+int
+float64
+```
+
+在 [http://play.golang.org/p/XQMcUVsOja](http://play.golang.org/p/XQMcUVsOja) 尝试这段代码。
+
+更多关于反射包的文档：[http://golang.org/pkg/reflect/#Type](http://golang.org/pkg/reflect/#Type)
+
