--- a/contents/未翻译/20 - 指针和值在函数参数和返回值上的对比.md
+++ b/contents/未翻译/20 - 指针和值在函数参数和返回值上的对比.md
@@ -1,1 +1,81 @@
 <https://stackoverflow.com/questions/23542989/pointers-vs-values-in-parameters-and-return-values>
+
+# 问题
+
+在 Go 中有很多将 `struct` 或切片作为返回值的方式，我见过的有：
+
+```go
+type MyStruct struct {
+    Val int
+}
+
+func myfunc() MyStruct {
+    return MyStruct{Val: 1}
+}
+
+func myfunc() *MyStruct {
+    return &MyStruct{}
+}
+
+func myfunc(s *MyStruct) {
+    s.Val = 1
+}
+```
+
+我知道这些例子的区别。第一个例子返回了结构体的拷贝，第二个例子返回了函数体中创建的对象的指针，第三个例子得到一个现有对象的指针，直接更改原始值。
+
+我见过在各种情况下使用所有这些方法，现在想知道关于这些的最佳实践是什么。在什么情况下应使用哪一种？例如，第一种可能对小型结构体比较适用（因为开销很小），第二种适合更大的结构体，而如果追求极致的内存性能则选择第三种，因为你可以直接在不同的调用中复用同一个结构体实例。有没有什么情况下应该用哪一种的最佳实践？
+
+关于切片也有一样的问题：
+
+```go
+func myfunc() []MyStruct {
+    return []MyStruct{ MyStruct{Val: 1} }
+}
+
+func myfunc() []*MyStruct {
+    return []MyStruct{ &MyStruct{Val: 1} }
+}
+
+func myfunc(s *[]MyStruct) {
+    *s = []MyStruct{ MyStruct{Val: 1} }
+}
+
+func myfunc(s *[]*MyStruct) {
+    *s = []MyStruct{ &MyStruct{Val: 1} }
+}
+```
+
+再次提问：这里的最佳实践是什么。我知道切片就是指针，所以返回一个指向切片的指针是多余的。但是，我应该返回一个结构体的切片还是一个结构体指针的切片，或将切片的指针作为参数传入（在 [Go App Engine API](https://developers.google.com/appengine/docs/go/datastore/reference#Query.GetAll) 中被用到的模式）？
+
+# 回答
+
+长话短说：
+
+- 结构体方法使用指针接收器是正常的事情；[接收器的经验法则是](https://github.com/golang/go/wiki/CodeReviewComments#receiver-type)，“迟疑就用指针”。
+- 切片、字典、通道、字符串、函数和接口值内部是用指针实现的，再用指针指向它们一般是多余的操作。
+- 另外，对大型结构体或准备更改的结构体使用指针，否则就[传递值](https://github.com/golang/go/wiki/CodeReviewComments#pass-values)，毕竟因指针产生的意外更改是很令人困惑的。
+
+---
+
+一种通常应该使用指针的情况：
+
+- **接收器** 一般比其它参数更经常采用指针类型。调用方法更改对象或对象本身较大不是一件稀奇的事情，所以 [https://github.com/golang/go/wiki/CodeReviewComments#receiver-type](https://github.com/golang/go/wiki/CodeReviewComments#receiver-type) 推荐除了少数情况，一般请默认使用指针类型。
+  - Jeff Hodges 的 [copyfighter](https://github.com/jmhodges/copyfighter) 工具可以自动检查在非小型结构体上使用值接收器的代码。
+
+一些不需要使用指针的情况：
+
+- 代码审查指南推荐将例如 `type Point struct { latitude, longitude float64 }` 这样的，甚至更大一点的小结构体按值传递，除非你需要在函数中原地修改它们。
+  - 值语义避免了出现别名的情况，在这种情况下可能会意外地更改其它地方声明的值。
+  - 值传递可以避免 [逃逸分析](https://en.wikipedia.org/wiki/Locality_of_reference) 和堆内存申请来提高性能。在任何情况下，如果值和指针性能相似，推荐选择更自然的语义而不是榨干最后一点点速度。
+  - 因此，Go Wiki 的 [代码审查评论](https://github.com/golang/go/wiki/CodeReviewComments#pass-values) 页面推荐当结构体较小且可能保持不变时按值传递。
+  - 如果感觉“大”的界限有些模糊，确实，可以说很多结构体都介于指针和值都可行的范围内。下限来说，代码审查建议将切片（三个机器字）用作值接收器是合理的。接近上限的是 `bytes.Replace` 有 10 个字的参数（三个切片和一个 `int`）。你会遇到一些对于大结构体拷贝甚至在性能上更好的 [情况](https://medium.com/a-journey-with-go/go-should-i-use-a-pointer-instead-of-a-copy-of-my-struct-44b43b104963)，这和以往的经验不同。
+- 对于 `切片`，你不需要为了更改数组中的元素而传递它的指针。比如 `io.Reader.Read(p []byte)` 就更改了 `p` 中的字节数组。这可以说是“将小结构体当值看待”的特例，因为底层上你传递的其实是一个称作 *slice header* 的小结构体（见[Russ Cox (rsc)'s explanation](http://research.swtch.com/godata)）。类似地，你也**不需要用指针来更改 map 或与 channel 通信**
+- 对于 `需要重组的切片`（更改它的起点/长度/容量），像 `append` 这样的内建函数接受切片值并返回一个新值。它避免了出现别名，返回一个新的切片会使人们注意到可能分配了一个新数组的事实。
+  - 这种模式并不是永远适用。一些像 [数据库接口](https://cloud.google.com/appengine/docs/go/datastore/reference#Get) 或 [序列化器](http://golang.org/pkg/encoding/json/) 需要向编译时无法确定其类型的切片插入数据。它们通常用 `interface{}` 参数来接收一个指向切片的指针。
+- **字典、通道、字符串、函数和接口值**，像切片一样，是内建引用或已经包含引用的结构，如果你只是为了避免底层数据拷贝，就不需要传递它们的指针。（参考 [wrote a separate post on how interface values are stored](https://research.swtch.com/interfaces)）。
+  - 在一些需要*修改*内部结构的罕见情况下，还是需要传递指针，比如：[`flag.StringVar`](http://golang.org/pkg/flag/#StringVar) 就因此接收一个 `*string` 参数。
+
+一些需要使用指针的情况：
+
+- 
